SOURCE/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepts_Insurance__c</fullName>
        <label>Accepts Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number__c</fullName>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Text__c</fullName>
        <formula>Text( Patient_DOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB__Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_OF_Birth__c</fullName>
        <label>Date OF Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Accepted_IN__c</fullName>
        <label>Insurance Accepted-IN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Accepted_OON__c</fullName>
        <label>Insurance Accepted-OON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ReAdmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ReAdmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_For_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In For Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Population_Served__c</fullName>
        <label>Population Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Children (to age 12)</fullName>
                </value>
                <value>
                    <fullName>Adolescent Female</fullName>
                </value>
                <value>
                    <fullName>Adolescent Male</fullName>
                </value>
                <value>
                    <fullName>Adolescents</fullName>
                </value>
                <value>
                    <fullName>Adult Female</fullName>
                </value>
                <value>
                    <fullName>Adult Male</fullName>
                </value>
                <value>
                    <fullName>Adults (18+)</fullName>
                </value>
                <value>
                    <fullName>Older Adults (65+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Facility_Specialities__c</fullName>
        <label>Practice/Facility Specialities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addictions</fullName>
                </value>
                <value>
                    <fullName>Bi-Polar</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Eating Disorders</fullName>
                </value>
                <value>
                    <fullName>Generalized Anxiety Stress Disorder</fullName>
                </value>
                <value>
                    <fullName>Medical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mood Disorders-Depression/Bipolar/Schizophrenia</fullName>
                </value>
                <value>
                    <fullName>Personality Disorders</fullName>
                </value>
                <value>
                    <fullName>Trauma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sigmund_MRN__c</fullName>
        <label>Sigmund MRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sliding_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sliding Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Preferred Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Enterprise Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>